Diferentes ajustes, crear atleta, registro user, ver atletas, mi cuenta

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
     "target": "ES2022",
     "module": "ES2022",
     "typeRoots": [
-      "node_modules/@types"
+      "node_modules/@types",
+      "src/typings"   // Se agregó esta línea
     ],
     "lib": [
       "es2022",
