--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "^19.2.1",
     "@angular/compiler": "^19.2.1",
     "@angular/core": "^19.2.1",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^19.2.1",
     "@angular/material": "^19.2.2",
     "@angular/platform-browser": "^19.2.1",
@@ -38,6 +39,7 @@
     "@angular-devkit/build-angular": "^19.2.1",
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
+    "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
     "@types/node": "^18.19.80",
