--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "jquery": "^3.7.1",
     "rxjs": "~7.8.0",
     "sass": "^1.85.1",
+    "sweetalert2": "^11.17.2",
     "tslib": "^2.8.1",
     "zone.js": "~0.15.0"
   },
