--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@angular/cdk": "^19.2.2",
     "@angular/common": "^19.2.1",
-    "@angular/compiler": "^19.2.1",
+    "@angular/compiler": "^19.2.3",
     "@angular/core": "^19.2.1",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^19.2.1",
@@ -30,6 +30,7 @@
     "bootstrap-icons": "^1.11.3",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
+    "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
     "sass": "^1.85.1",
     "sweetalert2": "^11.17.2",
@@ -43,6 +44,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jwt-decode": "^3.1.0",
     "@types/node": "^18.19.80",
     "jasmine-core": "~5.6.0",
     "karma": "~6.4.0",
