--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular-devkit/build-angular": "^19.2.1",
     "@angular/cli": "^19.2.1",
     "@angular/compiler-cli": "^19.2.0",
+    "@ngx-env/builder": "^19.0.4",
     "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
