--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-server": "^19.2.0",
     "@angular/router": "^19.2.1",
     "@angular/ssr": "^19.2.1",
+    "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@types/angular": "^1.8.9",
     "admin-lte": "^4.0.0-beta3",
     "bootstrap": "^5.3.3",
