--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "admin-lte": "^4.0.0-beta3",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "css-loader": "^7.1.2",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
@@ -38,6 +39,7 @@
     "sass": "^1.85.1",
     "sweetalert2": "^11.17.2",
     "tslib": "^2.8.1",
+    "webpack": "^5.99.9",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
