--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
             ],
             "styles": [
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/bootstrap-select/dist/css/bootstrap-select.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css",
               "src/assets/adminlte/plugins/fontawesome-free/css/all.min.css",
               "src/assets/adminlte/plugins/overlayScrollbars/css/OverlayScrollbars.min.css",
@@ -42,6 +43,7 @@
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "node_modules/bootstrap-select/dist/js/bootstrap-select.min.js",
               "src/assets/adminlte/plugins/jquery/jquery.min.js",
               "src/assets/adminlte/plugins/bootstrap/js/bootstrap.bundle.min.js",
               "src/assets/adminlte/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js",
