--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@angular/router": "^19.2.1",
     "@angular/ssr": "^19.2.1",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@ng-select/ng-select": "^14.0.0",
     "@types/angular": "^1.8.9",
     "admin-lte": "^4.0.0-beta3",
-    "bootstrap": "^5.3.3",
+    "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.11.3",
+    "bootstrap-select": "^1.13.18",
     "css-loader": "^7.1.2",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
@@ -50,6 +52,7 @@
     "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/jquery": "^3.5.32",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^18.19.80",
     "jasmine-core": "~5.6.0",
