--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,8 +5,10 @@
   "compilerOptions": {
     "outDir": "./out-tsc/app",
     "types": [
-      "node"
+      "node",
+      "jquery"
     ]
+
   },
   "files": [
     "src/main.ts",
