--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-select": "^1.13.18",
+    "chart.js": "^4.5.0",
     "css-loader": "^7.1.2",
     "express": "^4.18.2",
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
+    "ng2-charts": "^4.1.1",
     "optica_newvision_frontend": "file:",
     "rxjs": "~7.8.0",
     "sass": "^1.85.1",
