--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@angular/animations": "^19.2.4",
     "@angular/cdk": "^19.2.2",
     "@angular/common": "^19.2.1",
-    "@angular/compiler": "^19.2.3",
-    "@angular/core": "^19.2.1",
+    "@angular/compiler": "19.2.3",
+    "@angular/core": "19.2.1",
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^19.2.1",
     "@angular/localize": "^19.2.4",
