--- a/package.json
+++ b/package.json
@@ -11,19 +11,19 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^19.2.4",
+    "@angular/animations": "^19.2.14",
     "@angular/cdk": "^19.2.2",
-    "@angular/common": "^19.2.1",
-    "@angular/compiler": "19.2.3",
-    "@angular/core": "19.2.1",
+    "@angular/common": "^19.2.14",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
     "@angular/flex-layout": "^15.0.0-beta.42",
-    "@angular/forms": "^19.2.1",
+    "@angular/forms": "^19.2.14",
     "@angular/localize": "^19.2.4",
     "@angular/material": "^19.2.2",
-    "@angular/platform-browser": "^19.2.1",
-    "@angular/platform-browser-dynamic": "^19.2.1",
+    "@angular/platform-browser": "^19.2.14",
+    "@angular/platform-browser-dynamic": "^19.2.14",
     "@angular/platform-server": "^19.2.0",
-    "@angular/router": "^19.2.1",
+    "@angular/router": "^19.2.14",
     "@angular/ssr": "^19.2.1",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
     "@ng-select/ng-select": "^14.0.0",
