--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "jquery": "^3.7.1",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^4.1.1",
+    "ngx-skeleton-loader": "^11.3.0",
     "optica_newvision_frontend": "file:",
     "rxjs": "~7.8.0",
     "sass": "^1.85.1",
