--- a/angular.json
+++ b/angular.json
@@ -108,8 +108,19 @@
               "vendorChunk": false
             },
             "local": {
-              "fileReplacements": [],
-              "outputPath": "dist/local"
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ],
+              "outputPath": "dist/local",
+              "optimization": false,
+              "buildOptimizer": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "vendorChunk": true,
+              "namedChunks": true
             }
           },
           "defaultConfiguration": "local"
