--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
     "chart.js": "^4.5.0",
     "css-loader": "^7.1.2",
     "express": "^4.18.2",
+    "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
+    "jspdf": "^3.0.4",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^4.1.1",
     "ngx-skeleton-loader": "^11.3.0",
@@ -54,6 +56,7 @@
     "@ngx-env/builder": "^19.0.4",
     "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.17",
+    "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
     "@types/jwt-decode": "^3.1.0",
