--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "chart.js": "^4.5.0",
     "css-loader": "^7.1.2",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.4",
@@ -47,6 +48,7 @@
     "sweetalert2": "^11.17.2",
     "tslib": "^2.8.1",
     "webpack": "^5.99.9",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
@@ -56,6 +58,7 @@
     "@ngx-env/builder": "^19.0.4",
     "@types/bootstrap": "^5.2.10",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.7",
     "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
