--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "html2canvas": "^1.4.1",
     "jquery": "^3.7.1",
     "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "ng2-charts": "^4.1.1",
     "ngx-skeleton-loader": "^11.3.0",
@@ -62,6 +63,7 @@
     "@types/html2canvas": "^1.0.0",
     "@types/jasmine": "~5.1.0",
     "@types/jquery": "^3.5.32",
+    "@types/jspdf": "^2.0.0",
     "@types/jwt-decode": "^3.1.0",
     "@types/node": "^18.19.80",
     "jasmine-core": "~5.6.0",
