--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "bootstrap": "^5.3.7",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-select": "^1.13.18",
-    "chart.js": "^4.5.0",
+    "chart.js": "^4.5.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "css-loader": "^7.1.2",
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
@@ -58,6 +59,7 @@
     "@angular/compiler-cli": "^19.2.0",
     "@ngx-env/builder": "^19.0.4",
     "@types/bootstrap": "^5.2.10",
+    "@types/chart.js": "^4.0.1",
     "@types/express": "^4.17.17",
     "@types/file-saver": "^2.0.7",
     "@types/html2canvas": "^1.0.0",
